--- a/trunk/practicemyjquery/src/main/greatgreatgrandpa.html
+++ b/trunk/practicemyjquery/src/main/greatgreatgrandpa.html
@@ -4,20 +4,22 @@
         <script src="http://code.jquery.com/jquery-latest.js"></script>
         <script type="text/javascript">
         $(function(){
-        $('*').each(function(){
-        var current = this;
-        this.addEventListener('click',function(event) {
-        say('Capture for ' + current.tagName + '#'+ current.id +
-        ' target is ' + event.target.id);
-        },true);
-        this.addEventListener('click',function(event) {
-        say('Bubble for ' + current.tagName + '#'+ current.id +
-        ' target is ' + event.target.id);
-        },false);
-        });
+            $('*').each(function(){
+                var current = this;
+                this.addEventListener('click',
+                    function(event) {
+                        say('Capture for ' + current.tagName + '#'+ current.id +
+                        ' target is ' + event.target.id);
+                    },true);
+                this.addEventListener('click',
+                    function(event) {
+                        say('Bubble for ' + current.tagName + '#'+ current.id +
+                        ' target is ' + event.target.id);
+                    },false);
+            });
         });
         function say(text) {
-        $('#console').append('<div>'+text+'</div>');
+            $('#console').append('<div>'+text+'</div>');
         }
         </script>
     </head>
