--- a/trunk/practicemyjquery/src/main/collapsiblelist2.html
+++ b/trunk/practicemyjquery/src/main/collapsiblelist2.html
@@ -1,22 +1,17 @@
 <html>
 <head>
-<title>Collapsible List 1</title>
+<title>Collapsible List 2</title>
 </head>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script type="text/javascript">
 	$(function(){
 		$('li:has(ul)')
 		.click(function(event){
-			if (this == event.target) {
-				if ($(this).children().is(':hidden')) {
-					$(this)
-					.css('list-style-image','url(minus.gif)')
-					.children().show();
-				} else {
-					$(this)
-					.css('list-style-image','url(plus.gif)')
-					.children().hide();
-				}
+		if (this == event.target) {
+			$(this).children().toggle();
+			$(this).css('list-style-image',
+			($(this).children().is(':hidden')) ?
+			'url(plus.gif)' : 'url(minus.gif)');
 			}
 			return false;
 		})
@@ -29,7 +24,7 @@
 	});
 </script>
 <body>
-<fieldset><legend>Collapsible List &mdash; Take 1</legend>
+<fieldset><legend>Collapsible List &mdash; Take 2</legend>
 Showing and hiding elements 129
 <ul>
 	<li>Item 1</li>
