--- a/practicemyjquery/src/main/collapsiblelist3.html
+++ b/practicemyjquery/src/main/collapsiblelist3.html
@@ -1,27 +1,26 @@
 <html>
 <head>
-<title>Collapsible List 1</title>
+<title>Collapsible List 3</title>
 </head>
 <script src="http://code.jquery.com/jquery-latest.js"></script>
 <script type="text/javascript">
 	$(function(){
+		$('li')
+		.css('pointer','default')
+		.css('list-style-image','none');
 		$('li:has(ul)')
 		.click(function(event){
 			if (this == event.target) {
-				if ($(this).children().is(':hidden')) {
-					$(this)
-					.css('list-style-image','url(minus.gif)')
-					.children().show();
-				} else {
-					$(this)
-					.css('list-style-image','url(plus.gif)')
-					.children().hide();
-				}
+			$(this).css('list-style-image',
+			(!$(this).children().is(':hidden')) ?
+			'url(plus.gif)' : 'url(minus.gif)');
+			$(this).children().toggle('slow');
 			}
 			return false;
 		})
-		.css('cursor','pointer')
-		.click();
+		.css({cursor:'pointer',
+		'list-style-image':'url(plus.gif)'})
+		.children().hide();
 		$('li:not(:has(ul))').css({
 			cursor: 'default',
 			'list-style-image':'none'
@@ -29,7 +28,7 @@
 	});
 </script>
 <body>
-<fieldset><legend>Collapsible List &mdash; Take 1</legend>
+<fieldset><legend>Collapsible List &mdash; Take 3</legend>
 Showing and hiding elements 129
 <ul>
 	<li>Item 1</li>
